--- a/Proyectos/viviendaLT10.html
+++ b/Proyectos/viviendaLT10.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <!-- Lightbox -->
+    <link href="./styles/lightbox.min.css" rel="stylesheet" />
     <!-- Styles CSS -->
     <link rel="stylesheet" href="./styles/viviendas.css">
     <!-- Fontawesome -->
@@ -106,12 +108,15 @@
 
              <!-- ============== 01 -->
             <div class="col-12 col_gallery">
-                <div type="button" data-bs-toggle="modal" data-bs-target="#vivienda01">
+                <a href="../Proyectos/viviendaLT10/1.jpg" data-lightbox="roadtrip">
+                    <img src="../Proyectos/viviendaLT10/1.jpg" alt="Vivienda LT10" width="100%" height="100%">
+                </a>
+                <!-- <div type="button" data-bs-toggle="modal" data-bs-target="#vivienda01">
                     <img class="img_gallery" src="../Proyectos/viviendaLT10/1.jpg" alt="Vivienda LT10" width="100%" height="100%">
-                </div>
+                </div> -->
             </div>
             <!-- Modal 01-->
-            <div class="modal fade" id="vivienda01" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <!-- <div class="modal fade" id="vivienda01" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                 <div class="modal-dialog modal-dialog-centered">
                     <div class="modal-content border-0">
                         <div class="modal-header">
@@ -122,17 +127,20 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
            
             <!-- =============== 02 -->
             <div class="col-12 col_gallery">
-                <div type="button" data-bs-toggle="modal" data-bs-target="#vivienda02" >
+                <a href="../Proyectos/viviendaLT10/2.jpg" data-lightbox="roadtrip">
+                    <img src="../Proyectos/viviendaLT10/2.jpg" alt="Vivienda LT10" width="100%" height="100%">
+                </a>
+                <!-- <div type="button" data-bs-toggle="modal" data-bs-target="#vivienda02" >
                     <img class="img_gallery" src="../Proyectos/viviendaLT10/2.jpg" alt="Vivienda LT10" width="100%" height="100%">
-                </div>
+                </div> -->
             </div>
 
              <!-- Modal 02-->
-             <div class="modal fade" id="vivienda02" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+             <!-- <div class="modal fade" id="vivienda02" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                 <div class="modal-dialog modal-dialog-centered">
                     <div class="modal-content border-0">
                         <div class="modal-header">
@@ -143,17 +151,20 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
              <!-- =============== 03 -->
             <div class="col-12 col_gallery"> 
-                <div type="button" data-bs-toggle="modal" data-bs-target="#vivienda03" >
+                <a href="../Proyectos/viviendaLT10/3.jpg" data-lightbox="roadtrip">
+                    <img src="../Proyectos/viviendaLT10/3.jpg" alt="Vivienda LT10" width="100%" height="100%">
+                </a>
+                <!-- <div type="button" data-bs-toggle="modal" data-bs-target="#vivienda03" >
                     <img class="img_gallery" src="../Proyectos/viviendaLT10/3.jpg" alt="Vivienda LT10" width="100%" height="100%">
-                </div>
+                </div> -->
             </div>
 
              <!-- Modal 03-->
-             <div class="modal fade" id="vivienda03" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+             <!-- <div class="modal fade" id="vivienda03" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                 <div class="modal-dialog modal-dialog-centered">
                     <div class="modal-content border-0">
                         <div class="modal-header">
@@ -164,17 +175,20 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
             <!-- ================ 04 -->
             <div class="col-12 col_gallery">
-                <div type="button" data-bs-toggle="modal" data-bs-target="#vivienda04" >
+                <a href="../Proyectos/viviendaLT10/4.jpg" data-lightbox="roadtrip">
+                    <img src="../Proyectos/viviendaLT10/4.jpg" alt="Vivienda LT10" width="100%" height="100%">
+                </a>
+                <!-- <div type="button" data-bs-toggle="modal" data-bs-target="#vivienda04" >
                     <img class="img_gallery" src="../Proyectos/viviendaLT10/4.jpg" alt="Vivienda LT10" width="100%" height="100%">
-                </div>
+                </div> -->
             </div>
 
             <!-- Modal 04-->
-            <div class="modal fade" id="vivienda04" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <!-- <div class="modal fade" id="vivienda04" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                 <div class="modal-dialog modal-dialog-centered">
                     <div class="modal-content border-0">
                         <div class="modal-header">
@@ -185,16 +199,19 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
             <!-- ================ 05 -->
             <div class="col-12 col_gallery">
-                <div type="button" data-bs-toggle="modal" data-bs-target="#vivienda05" >
+                <a href="../Proyectos/viviendaLT10/5.jpg" data-lightbox="roadtrip">
+                    <img src="../Proyectos/viviendaLT10/5.jpg" alt="Vivienda LT10" width="100%" height="100%">
+                </a>
+                <!-- <div type="button" data-bs-toggle="modal" data-bs-target="#vivienda05" >
                     <img class="img_gallery" src="../Proyectos/viviendaLT10/5.jpg" alt="Vivienda LT10" width="100%" height="100%">
-                </div>
+                </div> -->
             </div>
             <!-- Modal 05-->
-            <div class="modal fade" id="vivienda05" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <!-- <div class="modal fade" id="vivienda05" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                 <div class="modal-dialog modal-dialog-centered">
                     <div class="modal-content border-0">
                         <div class="modal-header">
@@ -205,16 +222,19 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
             <!-- ================ 06 -->
             <div class="col-12 col_gallery">
-                <div type="button" data-bs-toggle="modal" data-bs-target="#vivienda06" >
+                <a href="../Proyectos/viviendaLT10/6.jpg" data-lightbox="roadtrip">
+                    <img src="../Proyectos/viviendaLT10/6.jpg" alt="Vivienda LT10" width="100%" height="100%">
+                </a>
+                <!-- <div type="button" data-bs-toggle="modal" data-bs-target="#vivienda06" >
                     <img class="img_gallery" src="../Proyectos/viviendaLT10/6.jpg" alt="Vivienda LT10" width="100%" height="100%">
-                </div>
+                </div> -->
             </div> 
             <!-- Modal 06-->
-            <div class="modal fade" id="vivienda06" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <!-- <div class="modal fade" id="vivienda06" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                 <div class="modal-dialog modal-dialog-centered">
                     <div class="modal-content border-0">
                         <div class="modal-header">
@@ -225,16 +245,19 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
             <!-- ================= 07 Plano -->
             <div class="col-12 col_gallery">
-                <div type="button" data-bs-toggle="modal" data-bs-target="#lamina01" >
+                <a href="../Proyectos/viviendaLT10/LAMINA 1 - IMPLANTACION.jpg" data-lightbox="roadtrip">
+                    <img src="../Proyectos/viviendaLT10/LAMINA 1 - IMPLANTACION.jpg" alt="Vivienda LT10" width="100%" height="100%">
+                </a>
+                <!-- <div type="button" data-bs-toggle="modal" data-bs-target="#lamina01" >
                     <img class="img_gallery" src="../Proyectos/viviendaLT10/LAMINA 1 - IMPLANTACION.jpg" alt="Vivienda LT10" width="100%" height="100%">
-                </div>
+                </div> -->
             </div> 
             <!-- Modal 07 Plano-->
-            <div class="modal fade" id="lamina01" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <!-- <div class="modal fade" id="lamina01" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                 <div class="modal-dialog modal-dialog-centered">
                     <div class="modal-content border-0">
                         <div class="modal-header">
@@ -245,16 +268,19 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
              <!-- ================= 08 Plano -->
              <div class="col-12 col_gallery">
-                <div type="button" data-bs-toggle="modal" data-bs-target="#lamina02" >
+                <a href="../Proyectos/viviendaLT10/LAMINA 2 - PLANTA.jpg" data-lightbox="roadtrip">
+                    <img src="../Proyectos/viviendaLT10/LAMINA 2 - PLANTA.jpg" alt="Vivienda LT10" width="100%" height="100%">
+                </a>
+                <!-- <div type="button" data-bs-toggle="modal" data-bs-target="#lamina02" >
                     <img class="img_gallery" src="../Proyectos/viviendaLT10/LAMINA 2 - PLANTA.jpg" alt="Vivienda LT10" width="100%" height="100%">
-                </div>
+                </div> -->
             </div> 
             <!-- Modal 08 Plano-->
-            <div class="modal fade" id="lamina02" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <!-- <div class="modal fade" id="lamina02" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                 <div class="modal-dialog modal-dialog-centered">
                     <div class="modal-content border-0">
                         <div class="modal-header">
@@ -265,16 +291,19 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
              <!-- ================= 09 Plano -->
              <div class="col-12 col_gallery">
-                <div type="button" data-bs-toggle="modal" data-bs-target="#lamina03" >
+                <a href="../Proyectos/viviendaLT10/LAMINA 3 - FRENTE.jpg" data-lightbox="roadtrip">
+                    <img src="../Proyectos/viviendaLT10/LAMINA 3 - FRENTE.jpg" alt="Vivienda LT10" width="100%" height="100%">
+                </a>
+                <!-- <div type="button" data-bs-toggle="modal" data-bs-target="#lamina03" >
                     <img class="img_gallery" src="../Proyectos/viviendaLT10/LAMINA 3 - FRENTE.jpg" alt="Vivienda LT10" width="100%" height="100%">
-                </div>
+                </div> -->
             </div> 
             <!-- Modal 09 Plano-->
-            <div class="modal fade" id="lamina03" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <!-- <div class="modal fade" id="lamina03" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                 <div class="modal-dialog modal-dialog-centered">
                     <div class="modal-content border-0">
                         <div class="modal-header">
@@ -285,16 +314,19 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
             <!-- ================= 10 Plano -->
             <div class="col-12 col_gallery">
-                <div type="button" data-bs-toggle="modal" data-bs-target="#lamina04" >
+                <a href="../Proyectos/viviendaLT10/LAMINA 4 - CONTRAFRENTE.jpg" data-lightbox="roadtrip">
+                    <img src="../Proyectos/viviendaLT10/LAMINA 4 - CONTRAFRENTE.jpg" alt="Vivienda LT10" width="100%" height="100%">
+                </a>
+                <!-- <div type="button" data-bs-toggle="modal" data-bs-target="#lamina04" >
                     <img class="img_gallery" src="../Proyectos/viviendaLT10/LAMINA 4 - CONTRAFRENTE.jpg" alt="Vivienda LT10" width="100%" height="100%">
-                </div>
+                </div> -->
             </div> 
             <!-- Modal 10 Plano-->
-            <div class="modal fade" id="lamina04" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <!-- <div class="modal fade" id="lamina04" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                 <div class="modal-dialog modal-dialog-centered">
                     <div class="modal-content border-0">
                         <div class="modal-header">
@@ -305,16 +337,19 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
             <!-- ================= 11 Plano -->
             <div class="col-12 col_gallery">
-                <div type="button" data-bs-toggle="modal" data-bs-target="#lamina05" >
+                <a href="../Proyectos/viviendaLT10/LAMINA 5 - LATERAL DERECHO.jpg" data-lightbox="roadtrip">
+                    <img src="../Proyectos/viviendaLT10/LAMINA 5 - LATERAL DERECHO.jpg" alt="Vivienda LT10" width="100%" height="100%">
+                </a>
+                <!-- <div type="button" data-bs-toggle="modal" data-bs-target="#lamina05" >
                     <img class="img_gallery" src="../Proyectos/viviendaLT10/LAMINA 5 - LATERAL DERECHO.jpg" alt="Vivienda LT10" width="100%" height="100%">
-                </div>
+                </div> -->
             </div> 
             <!-- Modal 11 Plano-->
-            <div class="modal fade" id="lamina05" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <!-- <div class="modal fade" id="lamina05" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                 <div class="modal-dialog modal-dialog-centered">
                     <div class="modal-content border-0">
                         <div class="modal-header">
@@ -325,16 +360,19 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
             <!-- ================= 12 Plano -->
             <div class="col-12 col_gallery">
-                <div type="button" data-bs-toggle="modal" data-bs-target="#lamina06" >
+                <a href="../Proyectos/viviendaLT10/LAMINA 6 - LATERAL IZQUIERDO.jpg" data-lightbox="roadtrip">
+                    <img src="../Proyectos/viviendaLT10/LAMINA 6 - LATERAL IZQUIERDO.jpg" alt="Vivienda LT10" width="100%" height="100%">
+                </a>
+                <!-- <div type="button" data-bs-toggle="modal" data-bs-target="#lamina06" >
                     <img class="img_gallery" src="../Proyectos/viviendaLT10/LAMINA 6 - LATERAL IZQUIERDO.jpg" alt="Vivienda LT10" width="100%" height="100%">
-                </div>
+                </div> -->
             </div> 
             <!-- Modal 12 Plano-->
-            <div class="modal fade" id="lamina06" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <!-- <div class="modal fade" id="lamina06" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                 <div class="modal-dialog modal-dialog-centered">
                     <div class="modal-content border-0">
                         <div class="modal-header">
@@ -345,16 +383,19 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
              <!-- ================= 13 Plano -->
              <div class="col-12 col_gallery">
-                <div type="button" data-bs-toggle="modal" data-bs-target="#lamina07" >
+                <a href="../Proyectos/viviendaLT10/LAMINA 7 - CORTE A.jpg" data-lightbox="roadtrip">
+                    <img src="../Proyectos/viviendaLT10/LAMINA 7 - CORTE A.jpg" alt="Vivienda LT10" width="100%" height="100%">
+                </a>
+                <!-- <div type="button" data-bs-toggle="modal" data-bs-target="#lamina07" >
                     <img class="img_gallery" src="../Proyectos/viviendaLT10/LAMINA 7 - CORTE A.jpg" alt="Vivienda LT10" width="100%" height="100%">
-                </div>
+                </div> -->
             </div> 
             <!-- Modal 13 Plano-->
-            <div class="modal fade" id="lamina07" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <!-- <div class="modal fade" id="lamina07" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                 <div class="modal-dialog modal-dialog-centered">
                     <div class="modal-content border-0">
                         <div class="modal-header">
@@ -365,16 +406,19 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
               <!-- ================= 14 Plano -->
               <div class="col-12 col_gallery">
-                <div type="button" data-bs-toggle="modal" data-bs-target="#lamina08" >
+                <a href="../Proyectos/viviendaLT10/lamina8.jpg" data-lightbox="roadtrip">
+                    <img src="../Proyectos/viviendaLT10/lamina8.jpg" alt="Vivienda LT10" width="100%" height="100%">
+                </a>
+                <!-- <div type="button" data-bs-toggle="modal" data-bs-target="#lamina08" >
                     <img class="img_gallery" src="../Proyectos/viviendaLT10/lamina8.jpg" alt="Vivienda LT10" width="100%" height="100%">
-                </div>
+                </div> -->
             </div> 
             <!-- Modal 14 Plano-->
-            <div class="modal fade" id="lamina08" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <!-- <div class="modal fade" id="lamina08" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                 <div class="modal-dialog modal-dialog-centered">
                     <div class="modal-content border-0">
                         <div class="modal-header">
@@ -385,7 +429,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
 
         </div>
@@ -408,8 +452,11 @@
 
 
     
+    <!-- Jquery para lightbox -->
+    <script src="../js/lightbox-plus-jquery.min.js"></script>
      <!-- Bootstrap JS -->
      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
-
+    <!-- Lightbox js -->
+    <script src="path/to/lightbox.js"></script>
 </body>
 </html>
